z-index fix for the menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,7 @@ a:visited { color: inherit; text-decoration: none }
   height: 0;
   opacity: 0;
   transition: opacity .2s ease-out 0s, height 0s linear .2s;
+  z-index: 0 !important
 }
 
 .nav-open {
